[package]
name = "aquarium"
version = "0.1.0"
authors = ["Arnau Siches <asiches@gmail.com>"]
edition = "2018"

[[bin]]
path = "src/main.rs"
name = "aq"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = "=3.0.0-beta.1"
csv = "1.1"
dialoguer = "0.6.2"
indicatif = "0.15.0"
pulldown-cmark = { version = "0.7.2", default-features = false }
rusqlite = { version = "0.24", features = ["bundled", "functions", "limits", "load_extension"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
svg = "0.8"
thiserror = "1.0"
toml = "0.5.6"
url = "2.1.1"
